# powerAI

./: .gitignore  README.md  project.yml
ios/: CMakeLists.txt  project.yml
ios/App/: Info.plist  ViewController.swift
ios/App/Resources/: Main.storyboard
ios/App/ViewControllers/: PlayerViewController.swift
ios/Resources/: LaunchScreen.storyboard
ios/Sources/: SceneDelegate.swift
